# cute

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  justfile
.github/workflows/: ci.yml  docs.yml
cmake/: CuteHelpers.cmake
crates/cute-binding/: Cargo.toml
crates/cute-binding/src/: lib.rs
crates/cute-cli/: Cargo.toml
crates/cute-cli/src/: main.rs
crates/cute-cli/templates/: cli.cute.tmpl  cute.toml.empty  cute.toml.kirigami  cute_agent_body.md  gitignore  gpu.cute.tmpl  kirigami.cute.tmpl  qml.cute.tmpl  server.cute.tmpl  vscode_extensions.json  vscode_settings.json  widget.cute.tmpl
crates/cute-codegen/: Cargo.toml
crates/cute-codegen/src/: cpp.rs  desugar_state.rs  desugar_store.rs  desugar_suite.rs  lib.rs  mangle.rs  qss.rs  style.rs  ty.rs
crates/cute-codegen/src/snapshots/: cute_codegen__cpp__tests__todoItemHeader.snap  cute_codegen__cpp__tests__todoItemSource.snap
crates/cute-driver/: Cargo.toml
crates/cute-driver/src/: doctor.rs  lib.rs
crates/cute-driver/src/doctor/: packages.rs
crates/cute-hir/: Cargo.toml
crates/cute-hir/src/: lib.rs
crates/cute-lower/: Cargo.toml
crates/cute-lower/src/: lib.rs
crates/cute-lsp/: Cargo.toml
crates/cute-lsp/src/: lib.rs  main.rs
crates/cute-lsp/tests/: smoke.py
crates/cute-meta/: Cargo.toml
crates/cute-meta/src/: lib.rs
crates/cute-qpi-gen/: Cargo.toml
crates/cute-qpi-gen/src/: clang_walk.rs  emit.rs  lib.rs  main.rs  types.rs  typesystem.rs
crates/cute-syntax/: Cargo.toml
crates/cute-syntax/src/: ast.rs  diag.rs  format.rs  lex.rs  lib.rs  parse.rs  span.rs  token.rs
crates/cute-types/: Cargo.toml
crates/cute-types/src/: check.rs  env.rs  flow.rs  infer.rs  lib.rs  qss.rs  table.rs  ty.rs
docs/: CPP_INTEROP.md  CUTE_UI.md
examples/: README.md
examples/arc_class/: arc_class.cute
examples/async_demo/: async_demo.cute
examples/box_t/: box_t.cute
examples/calculator/: calculator.cute
examples/calculator_kirigami/: calculator_kirigami.cute  cute.toml
examples/cards/: cards.cute
examples/case_view/: case_view.cute
examples/charts/: charts.cute  cute.toml
examples/cli_args/: cli_args.cute
examples/code_highlight/: code_highlight.cute
examples/conditional/: conditional.cute
examples/counter/: counter.cute  model.cute  run.sh  styles.cute
examples/counter_state/: counter_state.cute
examples/embed_demo/: embed_demo.cute  greeting.txt
examples/enum_as_error_type/: enum_as_error_type.cute
examples/env_demo/: env_demo.cute
examples/err_variant_match/: err_variant_match.cute
examples/error_match/: error_match.cute
examples/file_handle/: file_handle.cute
examples/format_spec/: format_spec.cute
examples/generic_fn/: generic_fn.cute
examples/gpu_chart/: gpu_chart.cute  run.sh
examples/gpu_fresh/: cute.toml  gpu_fresh.cute
examples/gpu_huge_list/: cute.toml  gpu_huge_list.cute  run.sh
examples/gpu_modal/: gpu_modal.cute  run.sh
examples/gpu_notes/: gpu_notes.cute  run.sh
examples/gpu_pnl/: cute.toml  gpu_pnl.cute
examples/gpu_progress/: cute.toml  gpu_progress.cute  run.sh
examples/gpu_scroll/: cute.toml  gpu_scroll.cute  run.sh
examples/gpu_state/: gpu_state.cute
examples/gpu_svg/: gpu_svg.cute  run.sh
examples/gpu_table/: gpu_table.cute  run.sh
examples/http_hello/: http_hello.cute
examples/http_stream/: http_stream.cute
examples/init_deinit/: init_deinit.cute
examples/internal_prop_demo/: internal_prop_demo.cute
examples/json_demo/: json_demo.cute
examples/kf6_config/: cute.toml  kf6_config.cute
examples/kf6_i18n/: cute.toml  kf6_i18n.cute
examples/kf6_notifications/: cute.toml  kf6_notifications.cute
examples/kirigami_hello/: cute.toml  kirigami_hello.cute
examples/lib_counter/: cute.toml  lib_counter.cute
examples/lib_counter_app/: cute.toml  lib_counter_app.cute
examples/llm_chat/: README.md  cute.toml  deploy.sh  json_util.cute  llm_chat.cute  ndjson_stream.cute  ollama_smoke.cute
examples/loops/: loops.cute
examples/notes/: notes.cute
examples/qbytearray_parse/: qbytearray_parse.cute
examples/qml_pnl/: cute.toml  qml_pnl.cute
examples/qrange_model/: cute.toml  qrange_model.cute
examples/reading_list/: cute.toml  reading_list.cute
examples/recursive_enum/: recursive_enum.cute
examples/slice_demo/: slice_demo.cute
examples/store_demo/: store_demo.cute
examples/struct_point/: struct_point.cute
examples/test_demo/: test_demo.cute
examples/todolist/: todolist.cute
examples/todomv/: CMakeLists.txt  app.cute  error_handling.cute  greeter.cute  main.qml  run.sh  todo_item.cute
examples/todomv_cli/: CMakeLists.txt  app.cute  run.sh
examples/traits/: traits.cute
examples/traits_extern/: traits_extern.cute
examples/two_counters/: model.cute  two_counters.cute  viewmodel.cute
examples/weak_arc/: weak_arc.cute
examples/widgets_books/: cute.toml  widgets_books.cute
examples/widgets_counter/: widgets_counter.cute
examples/widgets_counter_state/: widgets_counter_state.cute
examples/widgets_hello/: widgets_hello.cute
examples/widgets_pnl/: cute.toml  widgets_pnl.cute
extensions/cute-pygments/: README.md  pyproject.toml
extensions/cute-pygments/cute_pygments/: __init__.py
extensions/kate-cute/: README.md  cute.xml
extensions/vscode-cute/: CHANGELOG.md  README.md  language-configuration.json  package.json
runtime/cpp/: cute_arc.h  cute_async.h  cute_code_highlighter.h  cute_error.h  cute_function.h  cute_generic.h  cute_ki18n.h  cute_meta.h  cute_model.h  cute_nullable.h  cute_slice.h  cute_string.h  (+1 more)
runtime/cute-ui/: CMakeLists.txt
runtime/cute-ui/cmake/: CuteUIConfig.cmake.in
runtime/cute-ui/examples/: CMakeLists.txt  counter_handcoded.cpp  hello_minimal.cpp  hello_window.cpp  textfield_handcoded.cpp
runtime/cute-ui/include/cute/ui/: app.hpp  component.hpp  element.hpp  paint.hpp  version.hpp  widgets.hpp  window.hpp
runtime/cute-ui/src/: app.cpp  component.cpp  element.cpp  style.cpp  version.cpp  window.cpp
tests/e2e/qt-verify/: CMakeLists.txt  main.cpp  run.sh
website/: .gitignore  README.md  zensical.toml
(+121 files in other folders)
