[package]
name = "cute-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cute language: HIR -> MIR lowering (ARC, ? operator, blocks, interpolation)."

[dependencies]
cute-syntax.workspace = true
cute-hir.workspace = true
cute-types.workspace = true
codespan-reporting.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
