[package]
name = "cute-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cute-lsp"
path = "src/main.rs"

[dependencies]
cute-syntax = { workspace = true }
cute-hir = { workspace = true }
cute-types = { workspace = true }
cute-binding = { workspace = true }
# desugar_suite + desugar_store: LSP's analyze pipeline calls into
# HIR / type-check directly, so we re-run the same AST→AST pre-passes
# the driver runs. HIR's `Item::Store(_) => unreachable!()` requires
# `desugar_store` to fire first; suite tests rely on the same flatten.
cute-codegen = { workspace = true }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
tower-lsp = "0.20"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
